Fixed power button glyph not showing (again)

--- a/.config/eww/mybar/eww.scss
+++ b/.config/eww/mybar/eww.scss
@@ -21,7 +21,7 @@
     margin-top: -4px;
 }
 .workspace_buttons {
-    font-family: "Hack";
+    font-family: Hack;
     font-size: 30px;
     margin: 0 3 0 2;
     color: #ffc994;
@@ -50,7 +50,6 @@
     background-color: #ff4647;
     margin-left: 14px;
     margin-right: 3px;
-
 }
 .media_art_popup {
     border: solid 5px #8dffff;
@@ -205,8 +204,9 @@
 // RIGHT MODULES 
 .power_button {
     color: #ff6156;
-    font-size: 20px;
-    margin: -10 15 -10 15;
+    font-size: 25px;
+    font-family: Caskaydia Cove Nerd Font;
+    margin: -10 18 -10 15;
 }
 .time_box {
     margin-top: -10px;
